# fmdtools

./: .buildinfo  .coverage  .coverage.starlight.2844.XSRGYtdx  .env.example  .gitignore  CONTRIBUTORS.html  CONTRIBUTORS.md  Examples.html  Examples.rst  Glossary.html  Glossary.rst  LICENSE  LICENSE.txt  Makefile  PUBLICATIONS.md  README.html  README.md  README.rst  README.txt  Simple Pump Example.ipynb  auxfunctions.py  conf.py  ex_pump.py  faultprop.py  genindex.html  index.html  index.rst  make.bat  modeldef.py  objects.inv  profiling.py  pump_script.py  py-modindex.html  pyproject.toml  pytest_report.html  quad_mdl.py  quad_script.py  requirements.txt  run_all_tests.py  search.html  (+7 more)
.pytest_cache/: README.html
_sources/: CONTRIBUTORS.md.txt  README.md.txt  README.rst.txt  index.rst.txt
_static/: documentation_options.js
disease model/: SIR sample model.py  SIR.py  Untitled1.ipynb  Untitled3.ipynb  differential_evolution.py  disease_model.ipynb  disease_model.py  disease_model_script.py  faultprop.py  fmd_final_version.py  fmd_final_version_script.py  notebook.tex  resultproc.py  simple disease model.ipynb  test for equation.py  test for new PL1.py  test for optimization.ipynb  test for optimization.py  test.ipynb  test2_add4if.ipynb  test_fault_disease_model.py  test_fault_disease_model_script.py  test_for_condition.py
docs/: .buildinfo  .html  Action Sequence Graph.ipynb  Approach Use-Cases.ipynb  Approach_Use-Cases.html  Approach_Use-Cases.ipynb  CONTRIBUTORS.html  Development Guide.html  Development Guide.rst  Development Guide.rst.bak  Examples.html  Examples.rst  Glossary.html  Glossary.rst  Intro to fmdtools.pptx  Intro_to_fmdtools.html  Intro_to_fmdtools.md  Model Structure Visualization Tutorial.ipynb  Model_Structure_Visualization_Tutorial.html  Model_Structure_Visualization_Tutorial.ipynb  Overview.md  (+42 more)
docs-source/: Contributions.rst  Development Guide.rst  Into_to_frdl.md  Intro_to_fmdtools.md  Intro_to_frdl.md  fmdtools.analyze.graph.rst  fmdtools.analyze.rst  fmdtools.define.block.rst  fmdtools.define.flow.rst  fmdtools.sim.rst  frdl.rst
(+3078 files in other folders)
