[project]
authors = [
  {name = "fmdtools Developers"},
]
maintainers = [
  {name = "Daniel Hulse", email = "daniel.e.hulse@nasa.gov"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]
description = "System resilience modelling, simulation, and assessment in Python"
license = {file="LICENSE"}
name = "fmdtools"
version="2.0.7"
readme = "README.md"
requires-python = ">=3.10"

dependencies = ["scipy",
                "tqdm",
                "networkx",
                "numpy >1.10, <= 1.26.4",
                "matplotlib >= 3.7.0",
                "pandas",
                "ordered-set",
                "dill",
                "recordclass == 0.22.1",
                "pytest",
                "graphviz",
                "shapely >= 2.0"
]

[project.urls]
Documentation = "https://nasa.github.io/fmdtools/"
source-code = "https://github.com/nasa/fmdtools"


[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.0.0"
]

[tool.setuptools.packages.find]
include = ["fmdtools*", "examples*"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "raise ",
    "if 0:",
    "if __name__ == .__main__.:",
	"def script_"
    ]
omit = [
    # omit everything in /build
    "/_build/*",
    "/docs/*",
    "*.pyc",
    "*/__pycache__/*",
    "*/tmp/*",
    # omit overall test
    "run_all_tests.py",
    "*/__init__.py",
    "*/ipykernel*",
    "*/Temp/*"
    ]

[tool.coverage.run]
omit = [
    # omit everything in /build
    "/_build/*",
    "/docs/*",
    "*.pyc",
    "*/__pycache__/*",
    "*/tmp/*",
    # omit overall test
    "run_all_tests.py",
    "*/__init__.py",
    "*/ipykernel*",
    "*/Temp/*"
    ]

